# newPricerMCforParallelisation

pricerMC/: CMakeLists.txt
pricerMC/src/: BlackScholesModel.cpp  BlackScholesModel.hpp  MonteCarlo.cpp  MonteCarlo.hpp  pricer.cpp
pricerMC/src/tests/: test_MonteCarloPrice0.cpp  test_MonteCarloPrice_t.cpp
